--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "displayName": "Modern Forms Fans",
   "name": "homebridge-modern-forms-fans",
-  "version": "1.0.10",
+  "version": "1.0.16",
   "description": "Add Modern Forms fans to your Home app using Homebridge.",
   "license": "Apache-2.0",
   "repository": {
@@ -31,6 +31,7 @@
     "axios": "^0.20.0",
     "get-ip-range": "^2.1.0",
     "memoizee": "^0.4.14",
+    "mqtt": "^5.3.5",
     "network": "^0.5.0",
     "network-calculator": "^2.0.1",
     "node-arp": "^1.0.6",
@@ -39,7 +40,7 @@
   },
   "devDependencies": {
     "@types/memoizee": "^0.4.4",
-    "@types/node": "^14.6.0",
+    "@types/node": "^20.11.17",
     "@types/ping": "^0.2.0",
     "@typescript-eslint/eslint-plugin": "^3.10.1",
     "@typescript-eslint/parser": "^3.10.1",
